# pymeshup

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIVEST.in  PyMeshupGUI.py  PyMeshupGUI.spec  README.md  README.rst  make_desktop_launcher.py  package-lock.json  package.json  pymeshup.yml  pyproject.toml  setup.cfg  setup.py  sitecustomize.py  test_step_copy.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
guis/: GHS_to_DAVE_form.ui  main.ui  run.bat  step_mesher.ui
pymeshup-base/: README.md  pyproject.toml
pymeshup-base/src/pymeshup_base/: __init__.py  frames.py  step_import.py  volumes.py
pymeshup-base/src/pymeshup_base/helpers/: earcut_2d.py  triangulate_non_convex.py
src/: run.py
src/pymeshup/: GUI.py  __init__.py  frames.py  ghs_import.py  hull.py  hull_builder.py  main.py  reframe.py  skeleton.py  step_import.py  volumes.py
src/pymeshup/DAVE/: GHS_to_DAVE.py  GHS_to_DAVE_dialog.py  GHS_to_DAVE_form.py
src/pymeshup/gui/: capytaine_runner.py  cheetah.stl  examples.py  main.py  stepmesher.py
src/pymeshup/gui/digitizer/: digitizer.py
src/pymeshup/gui/examples/: barge_and_tanks_using_dicts_and_functions.pym  barge_mesh_from_box.pym  create tank in a given hull-shape.pym  make diffraction mesh.pym  pontoon from frames.pym  sailboat.pym  simple.pym
src/pymeshup/gui/forms/: main_form.py  step_mesher.py
src/pymeshup/gui/helpers/: highlighter.py  vtkBlenderLikeInteractionStyle.py
src/pymeshup/helpers/: darkmode.py  earcut_2d.py  geo_math.py  triangulate_non_convex.py
src/pymeshup/syntaxedit/: core.py  highlightslot.py
tests/: conftest.py  test_block_and_rotations.py  test_build_triangles.py  test_cut.py  test_extract_frames.py  test_frames.py  test_ghs.py  test_ghs_fr30.py  test_gui_grab_exec.py  test_hull.py  test_merge_close_vertices.py  test_non_closed_ends.py  test_regrid.py  test_skeleton.py  test_step_reader.py  test_triangulation.py  test_volumes.py  test_vtk_conversions.py
tests/assets_for_tests/: hull_30fr.gf  lq_3dpea.com_kvlcc2.stl  skegs_only.GF  sphere_r1.step
tests/ghs/: test_skegs.py
tests/hull/: test_build_hull_digitized_frames.py
tests/test_examples/: test_box_cylinder_examples.py  test_earcut_examples.py  test_frame_examples.py  test_hull_examples.py  test_volume_examples.py
tests/test_hull/: test_build_hull_digitized_frames.py  test_frames_negaive_startpoint.py  test_minimal_info.py
tests/test_polymesh/: test_earclip.py
